Update documentation. Relates to #60